# agentinit

./: .gitignore  README.md  pyproject.toml
agentinit/: cli.py  generator.py
agentinit/templates/autogen/: main.py.j2  requirements.txt.j2
agentinit/templates/autogen/agents/: base_agent.py.j2
agentinit/templates/autogen/tools/: sample_tool.py.j2
agentinit/templates/common/: .env.example.j2  Dockerfile.j2  README.md.j2  config.yaml.j2  pyproject.toml.j2
agentinit/templates/crewai/: main.py.j2  requirements.txt.j2
agentinit/templates/crewai/agents/: base_agent.py.j2
agentinit/templates/crewai/tools/: sample_tool.py.j2
agentinit/templates/google_adk/: main.py.j2  requirements.txt.j2
agentinit/templates/google_adk/agents/: base_agent.py.j2
agentinit/templates/langgraph/: main.py.j2  requirements.txt.j2
agentinit/templates/langgraph/agents/: base_agent.py.j2
agentinit/templates/langgraph/tools/: sample_tool.py.j2
agentinit/templates/openai_agents/: main.py.j2  requirements.txt.j2
agentinit/templates/openai_agents/agents/: base_agent.py.j2
agentinit/templates/openai_agents/tools/: sample_tool.py.j2
agentinit/templates/smolagents/: main.py.j2  requirements.txt.j2
agentinit/templates/smolagents/agents/: base_agent.py.j2
agentinit/templates/smolagents/tools/: sample_tool.py.j2
tests/: test_generator.py
