[tool.poetry]
name = "agentinit-cli"
version = "0.3.2"
description = "A CLI tool to scaffold production-ready LLM agent projects"
authors = ["Swapnil Bhattacharya <swapnil.bhat17@outlook.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/NorthCommits/agentinit"
repository = "https://github.com/NorthCommits/agentinit"
keywords = ["llm", "agents", "scaffolding", "langgraph", "crewai", "autogen", "google-adk", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
]
packages = [{include = "agentinit"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"
jinja2 = "^3.1.0"
rich = ">=13.0.0"
questionary = "^2.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
agentinit = "agentinit.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"